--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,17 +1,20 @@
 .header {
     position: fixed;
     width: 100%;
+    background: #F6FAFD;
+    box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
+    z-index: 100;
 
     &::before {
         position: absolute;
         content: "";
-        top: 0;
+        top: -1px;
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(217, 217, 217, 0.2);
-        filter: blur(2px);
         z-index: -1;
+
+        filter: blur(2px);
     }
 
     .header__wrap {
@@ -42,7 +45,9 @@
 
                 .header__navItem {
                     .header__navLink {
-                        display: block;
+                        display: flex;
+                        align-items: center;
+                        gap: 4px;
                         position: relative;
                         transition: 0.3s;
 
@@ -61,6 +66,13 @@
                         &:hover {
                             color: var(--green);
 
+                            svg {
+                                path {
+                                    transition: .3s;
+                                    fill: var(--green);
+                                }
+                            }
+
                             &::before {
                                 width: 100%;
                             }
@@ -74,7 +86,13 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            gap: 20px;
+            gap: 10px;
+            padding: 10px 15px;
+            border-radius: 50px;
+            background-color: var(--light-gray);
+
+            user-select: none;
+
 
             .town__text {
                 font-size: 14px;
@@ -83,22 +101,28 @@
 
             .town__btn {
                 cursor: pointer;
-                user-select: none;
 
-                padding: 10px 15px;
-                border-radius: 50px;
+                max-width: 95px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+
+                // padding: 10px 15px;
+                // border-radius: 50px;
 
                 color: var(--green);
                 font-size: 16px;
                 font-weight: 600;
-                // border: 1px var(--green) solid;
-                background-color: var(--light-gray);
+                // background-color: var(--light-gray);
 
                 transition: 0.2s;
 
                 &:hover {
-                    background-color: var(--green);
-                    color: var(--white);
+                    opacity: .8;
+                }
+
+                &:active {
+                    color: var(--dark-green);
                 }
             }
         }
@@ -119,7 +143,11 @@
             &:hover {
                 background-color: var(--light-gray);
                 color: var(--green);
-                // border-color: var(--green);
+            }
+
+            &:active {
+                background-color: var(--dark-green);
+                color: var(--light-gray);
             }
         }
     }
